# OSMExpress

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-container.yml  codeql.yml
cmake/: FindLMDB.cmake
docs/: MANUAL.md  PROGRAMMING_GUIDE.md
examples/: bbox_wkt.cpp  way_wkt.cpp
include/osmx/: region.h  storage.h  util.h
python/: setup.py
src/: cmd.cpp  expand.cpp  extract.cpp  storage.cpp  update.cpp
